reverted a change